--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "Real-time translation PWA for couples - bridging hearts across languages 💕",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^4.9.0",
-    "web-vitals": "^2.1.0",
     "axios": "^1.6.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.294.0",
-    "react-hot-toast": "^2.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.0",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
