--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
   "version": 2,
+  "framework": "create-react-app",
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "installCommand": "npm ci",
   "functions": {
     "api/**/*.js": {
-      "runtime": "@vercel/node@3.1.5"
+      "runtime": "nodejs20.x"
     }
   },
   "headers": [
